argocd/manifests/prod/apps/ashim/ingress-route.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ashim
  namespace: ashim
  annotations:
    kubernetes.io/ingress.class: "traefik"
    traefik.ingress.kubernetes.io/max-body-size: "100M"
    traefik.ingress.kubernetes.io/readtimeout: "900"
    traefik.ingress.kubernetes.io/writetimeout: "900"
    traefik.ingress.kubernetes.io/idletimeout: "900"

spec:
  ingressClassName: traefik
  rules:
    - host: ashim.pengiuns.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ashim
                port:
                  number: 80
  tls:
    - hosts:
        - ashim.pengiuns.com
      secretName: letsencrypt-wildcard-cert-pengiuns.com-production
